--- a/vignettes/vignette-625.Rmd
+++ b/vignettes/vignette-625.Rmd
@@ -16,7 +16,6 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(cortest625)
-library(bench)
 ```
 
 Start with two equal numerical vectors
@@ -49,7 +48,7 @@ x <- rnorm(50)
 y <- rnorm(50)
 
 #Pearson Benchmark
-pearson_bench = bench::mark(
+pearson_bench = bench:::mark(
   cor(x, y, method = "pearson"),
   cortest625(x, y, method = "pearson")
 )
@@ -64,7 +63,7 @@ plot(pearson_bench)
 Checking median speed of cor() vs cortest625() via Spearman Rank Correlation
 ```{r, echo = FALSE}
 #Spearman Benchmark
-spearman_bench = bench::mark(
+spearman_bench = bench:::mark(
   cor(x, y, method = "spearman"),
   cortest625(x, y, method = "spearman")
 )
@@ -79,7 +78,7 @@ plot(spearman_bench)
 Checking median speed of cor() vs cortest625() via Kenall Rank Correlation
 ```{r, echo = FALSE}
 #Kendall Benchmark
-kendall_bench = bench::mark(
+kendall_bench = bench:::mark(
   cor(x, y, method = "kendall"),
   cortest625(x, y, method = "kendall")
 )
